--- a/style.css
+++ b/style.css
@@ -290,12 +290,17 @@ section .title::after {
   text-align: center;
   border-radius: 6px;
   padding: 50px 25px;
-  cursor: pointer;
+  
   transition: all 0.3s ease;
 }
-.services .serv-content .card:hover {
-  background: #0396A6;
+.services .serv-content .card p{
+text-align: justify;
 }
+.services .serv-content .card p a{
+  color: #0396A6;
+  cursor: pointer;
+  }
+
 .services .serv-content .card .box {
   transition: all 0.3s ease;
 }
