--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ section .title::after {
   color: #fff;
   z-index: 9999;
   font-size: 30px;
-  border-radius: 30px;
+  border-radius: 50%;
   border-bottom-width: 2px;
   cursor: pointer;
   opacity: 0;
