--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ section {
   margin: auto;
 }
 .about,
-.services,
+.Projects,
 .skills,
 .teams,
 .contact,
@@ -45,7 +45,7 @@ footer {
   font-family: "Poppins", sans-serif;
 }
 .about .about-content,
-.services .serv-content,
+.Projects .serv-content,
 .skills .skills-content,
 .contact .contact-content {
   display: flex;
@@ -267,22 +267,22 @@ section .title::after {
   background: none;
 }
 
-/* services section styling */
-.services,
+/* Projects section styling */
+.Projects,
 .teams {
   color: #fff;
   background: #111;
 }
-.services .title::before,
+.Projects .title::before,
 .teams .title::before {
   background: #fff;
 }
-.services .title::after,
+.Projects .title::after,
 .teams .title::after {
   background: #111;
   content: "what i provide";
 }
-.services .serv-content .card {
+.Projects .serv-content .card {
   width: calc(33% - 20px);
   background: #222;
   text-align: center;
@@ -291,29 +291,29 @@ section .title::after {
   
   transition: all 0.3s ease;
 }
-.services .serv-content .card p{
+.Projects .serv-content .card p{
 text-align: justify;
 }
-.services .serv-content .card p a{
+.Projects .serv-content .card p a{
   color: #0396A6;
   cursor: pointer;
   }
 
-.services .serv-content .card .box {
+.Projects .serv-content .card .box {
   transition: all 0.3s ease;
 }
-.services .serv-content .card:hover .box {
+.Projects .serv-content .card:hover .box {
   transform: scale(1.05);
 }
-.services .serv-content .card i {
+.Projects .serv-content .card i {
   font-size: 50px;
   color: #0396A6;
   transition: color 0.3s ease;
 }
-.services .serv-content .card:hover i {
+.Projects .serv-content .card:hover i {
   color: #fff;
 }
-.services .serv-content .card .text {
+.Projects .serv-content .card .text {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
@@ -634,7 +634,7 @@ footer span a:hover {
   .about .about-content .right {
     flex: 100%;
   }
-  .services .serv-content .card {
+  .Projects .serv-content .card {
     width: calc(50% - 10px);
     margin-bottom: 20px;
   }
@@ -658,7 +658,7 @@ footer span a:hover {
   .home .home-content a {
     font-size: 20px;
   }
-  .services .serv-content .card {
+  .Projects .serv-content .card {
     width: 100%;
   }
 }
