--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ section .title::after {
 .Projects .title::after,
 .teams .title::after {
   background: #111;
-  content: "what i provide";
+  content: "what can i do";
 }
 .Projects .serv-content .card {
   width: calc(33% - 20px);
