--- a/style.css
+++ b/style.css
@@ -379,18 +379,18 @@ text-align: justify;
   background: #0396A6;
 }
 .skills-content .right .html::before {
-  width: 90%;
+  width: 95%;
 }
 .skills-content .right .css::before {
-  width: 60%;
-}
-.skills-content .right .js::before {
   width: 80%;
 }
-.skills-content .right .php::before {
-  width: 50%;
+.skills-content .right .js::before {
+  width: 30%;
 }
-.skills-content .right .mysql::before {
+.skills-content .right .java::before {
+  width: 70%;
+}
+.skills-content .right .sql::before {
   width: 70%;
 }
 
