--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ section .title::after {
   font-weight: 500;
   margin-left: 25px;
   transition: color 0.3s ease;
+  border-bottom: 2px solid transparent;
 }
 
 .navbar .menu li a:hover {
