--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
 .skills,
 .Projects,
 .internships,
-.teams,
+.certificates,
 .contact,
 footer {
   font-family: "Poppins", sans-serif;
@@ -311,19 +311,19 @@ section .title::after {
 /* Projects section and Education section styling */
 .Projects,
 .educations,
-.teams {
+.certificates {
   color: #fff;
   background: #111;
 }
 
 .Projects .title::before,
-.teams .title::before,
+.certificates .title::before,
 .educations .title::before {
   background: #fff;
 }
 
 .Projects .title::after,
-.teams .title::after .educations .title::after {
+.certificates .title::after .educations .title::after {
   background: #111;
   content: "what can i do";
 }
@@ -524,13 +524,16 @@ section .title::after {
 }
 
 
-/* teams section styling */
-.teams .title::after {
-  content: "who with me";
+/* certificates section styling */
+.certificates .title::after {
+  content: "what i achived";
 }
 
-.teams .carousel .card {
+.certificates .carousel .card {
+  display: flex;
+  justify-content: center;
   background: #17252A;
+  align-items: center;
   border-radius: 6px;
   padding: 25px 35px;
   text-align: center;
@@ -538,39 +541,57 @@ section .title::after {
   transition: all 0.3s ease;
 }
 
-.teams .carousel .card:hover {
+.certificates .carousel .card:hover {
   background: #0396A6;
-}
-
-.teams .carousel .card .box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease;
-}
-
-.teams .carousel .card:hover .box {
   transform: scale(1.05);
+
 }
 
-.teams .carousel .card .text {
-  font-size: 25px;
-  font-weight: 500;
-  margin: 10px 0 7px 0;
-}
 
-.teams .carousel .card img {
-  height: 150px;
-  width: 150px;
+
+
+
+
+.certificates .carousel .card img {
+  height: 200px;
+  width: 300px;
   object-fit: cover;
-  border-radius: 50%;
+
   border: 5px solid #0396A6;
   transition: all 0.3s ease;
 }
 
-.teams .carousel .card:hover img {
+.certificates .carousel .card:hover img {
   border-color: #fff;
+}
+
+/* full-img */
+.full-img {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+
+}
+
+.full-img img {
+  width: 90%;
+  max-width: 500px;
+}
+
+.full-img span {
+  position: absolute;
+  top: 13%;
+  right: 25%;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
 }
 
 .owl-dots {
@@ -885,7 +906,12 @@ footer span a:hover {
   .right form .error-box {
     width: 150px;
   }
-
+  .full-img span {
+  
+    top: 70%;
+    right: 50%;
+   
+  }
   .scroll-up-btn {
     right: 15px;
     bottom: 15px;
